tests/snapshots/table_occurrences/fmSyntaxColorizer/Syntax.Filter_FmVersion - ID 1065151.xml.snap
---
source: src/main.rs
expression: output_content
---
<TableOccurrence viewState="Related" height="36" id="1065151" name="Syntax.Filter_FmVersion" type="Local">
	<UUID modifications="18" userName="R.Watson" accountName="admin" timestamp="2020-08-04T09:52:12">E912CA2A-674C-41D2-85EC-F5792A9D172D</UUID>
	<BaseTableSourceReference type="BaseTableReference">
		<BaseTableReference id="133" name="_Syntax"></BaseTableReference>
	</BaseTableSourceReference>
	<CoordRect top="272" left="385" bottom="366" right="627"></CoordRect>
	<Color red="119" green="119" blue="119" alpha="1.00"></Color>
</TableOccurrence>
