tests/snapshots/table_occurrences/fmSyntaxColorizer/Syntax.Palette_Active - ID 1065131.xml.snap
---
source: src/main.rs
expression: output_content
---
<TableOccurrence viewState="Related" height="24" id="1065131" name="Syntax.Palette_Active" type="Local">
	<UUID modifications="23" userName="R.Watson" accountName="admin" timestamp="2020-08-04T09:52:12">1D9B0FEF-D801-4964-A4D4-64CA2123BCEE</UUID>
	<BaseTableSourceReference type="BaseTableReference">
		<BaseTableReference id="135" name="_Palette"></BaseTableReference>
	</BaseTableSourceReference>
	<CoordRect top="758" left="382" bottom="794" right="624"></CoordRect>
	<Color red="119" green="119" blue="119" alpha="1.00"></Color>
</TableOccurrence>
