tests/snapshots/table_occurrences/fmSyntaxColorizer/Syntax.Syntax_CommandStub - ID 1065154.xml.snap
---
source: src/main.rs
expression: output_content
---
<TableOccurrence viewState="Related" height="48" id="1065154" name="Syntax.Syntax_CommandStub" type="Local">
	<UUID modifications="11" userName="R.Watson" accountName="admin" timestamp="2020-08-04T09:52:12">24F9D11E-BC9A-4DE0-8961-AA9C317DB4B3</UUID>
	<BaseTableSourceReference type="BaseTableReference">
		<BaseTableReference id="133" name="_Syntax"></BaseTableReference>
	</BaseTableSourceReference>
	<CoordRect top="326" left="385" bottom="420" right="627"></CoordRect>
	<Color red="119" green="119" blue="119" alpha="1.00"></Color>
</TableOccurrence>
