tests/snapshots/table_occurrences/fmSyntaxColorizer/Syntax_Color_InActivePaletteByCommand - ID 1065140.xml.snap
---
source: src/main.rs
expression: output_content
---
<TableOccurrence viewState="Collapse" height="0" id="1065140" name="Syntax.Color_InActivePaletteByCommand" type="Local">
	<UUID modifications="19" userName="R.Watson" accountName="admin" timestamp="2020-08-04T09:52:12">1AF1DFBE-D2C1-462E-8393-69C7CE00CD40</UUID>
	<BaseTableSourceReference type="BaseTableReference">
		<BaseTableReference id="132" name="_Color"></BaseTableReference>
	</BaseTableSourceReference>
	<CoordRect top="586" left="382" bottom="604" right="624"></CoordRect>
	<Color red="119" green="119" blue="119" alpha="1.00"></Color>
</TableOccurrence>
