tests/snapshots/table_occurrences/fmSyntaxColorizer/Syntax_Color_InAnyPaletteByCommand - ID 1065149.xml.snap
---
source: src/main.rs
expression: output_content
---
<TableOccurrence viewState="Collapse" height="12" id="1065149" name="Syntax.Color_InAnyPaletteByCommand" type="Local">
	<UUID modifications="14" userName="R.Watson" accountName="admin" timestamp="2020-08-04T09:52:12">A28511FB-012D-480B-929E-9A475E48CE5F</UUID>
	<BaseTableSourceReference type="BaseTableReference">
		<BaseTableReference id="132" name="_Color"></BaseTableReference>
	</BaseTableSourceReference>
	<CoordRect top="610" left="382" bottom="628" right="624"></CoordRect>
	<Color red="119" green="119" blue="119" alpha="1.00"></Color>
</TableOccurrence>
