tests/snapshots/table_occurrences/fmSyntaxColorizer/Syntax_Color_specific_to_Palette - ID 1065139.xml.snap
---
source: src/main.rs
expression: output_content
---
<TableOccurrence viewState="Related" height="0" id="1065139" name="Syntax.Color_specific_to_Palette" type="Local">
	<UUID modifications="20" userName="R.Watson" accountName="admin" timestamp="2020-08-04T09:52:12">06EC7925-7DC0-403A-A2E7-BF07B1F8F919</UUID>
	<BaseTableSourceReference type="BaseTableReference">
		<BaseTableReference id="132" name="_Color"></BaseTableReference>
	</BaseTableSourceReference>
	<CoordRect top="446" left="382" bottom="506" right="624"></CoordRect>
	<Color red="119" green="119" blue="119" alpha="1.00"></Color>
</TableOccurrence>
