tests/snapshots/table_occurrences/fmSyntaxColorizer/Syntax_GUISyntax - ID 1065117.xml.snap
---
source: src/main.rs
expression: output_content
---
<TableOccurrence viewState="Related" height="12" id="1065117" name="Syntax.GUISyntax" type="Local">
	<UUID modifications="30" userName="R.Watson" accountName="admin" timestamp="2020-08-04T09:52:12">D6FA15E6-E89D-4561-8675-9E173161D4D0</UUID>
	<BaseTableSourceReference type="BaseTableReference">
		<BaseTableReference id="134" name="_GUISyntax"></BaseTableReference>
	</BaseTableSourceReference>
	<CoordRect top="643" left="382" bottom="691" right="624"></CoordRect>
	<Color red="119" green="119" blue="119" alpha="1.00"></Color>
</TableOccurrence>
