tests/snapshots/table_occurrences/fmSyntaxColorizer/Syntax_Palette_Color_VL - ID 1065121.xml.snap
---
source: src/main.rs
expression: output_content
---
<TableOccurrence viewState="Related" height="12" id="1065121" name="Syntax.Palette.Color_VL" type="Local">
	<UUID modifications="31" userName="R.Watson" accountName="admin" timestamp="2020-08-04T09:52:12">460630F9-F9A9-42BD-9D92-FE81FB5CA46E</UUID>
	<BaseTableSourceReference type="BaseTableReference">
		<BaseTableReference id="132" name="_Color"></BaseTableReference>
	</BaseTableSourceReference>
	<CoordRect top="700" left="382" bottom="748" right="624"></CoordRect>
	<Color red="119" green="119" blue="119" alpha="1.00"></Color>
</TableOccurrence>
