tests/snapshots/table_occurrences/fmSyntaxColorizer/_Home - ID 1065123.xml.snap
---
source: src/main.rs
expression: output_content
---
<TableOccurrence viewState="Related" height="24" id="1065123" name="_Home" type="Local">
	<UUID modifications="42" userName="R.Watson" accountName="admin" timestamp="2021-09-24T09:31:18">DED63781-79A4-481F-93A7-15FB9149DCD6</UUID>
	<BaseTableSourceReference type="BaseTableReference">
		<BaseTableReference id="136" name="_Home"></BaseTableReference>
	</BaseTableSourceReference>
	<CoordRect top="48" left="56" bottom="84" right="263"></CoordRect>
	<Color red="255" green="0" blue="153" alpha="1.00"></Color>
</TableOccurrence>
