tests/snapshots/table_occurrences/fmSyntaxColorizer/_Language - ID 1065125.xml.snap
---
source: src/main.rs
expression: output_content
---
<TableOccurrence viewState="Collapse" height="38" id="1065125" name="_Language" type="Local">
	<UUID modifications="20" userName="R.Watson" accountName="admin" timestamp="2020-08-04T09:52:12">234E09F4-FE24-4DE4-86FB-103467FD13AB</UUID>
	<BaseTableSourceReference type="BaseTableReference">
		<BaseTableReference id="137" name="_Language"></BaseTableReference>
	</BaseTableSourceReference>
	<CoordRect top="763" left="1033" bottom="781" right="1265"></CoordRect>
	<Color red="255" green="0" blue="153" alpha="1.00"></Color>
</TableOccurrence>
