tests/snapshots/table_occurrences/fmSyntaxColorizer/_MBS_DeveloperOptions - ID 1065152.xml.snap
---
source: src/main.rs
expression: output_content
---
<TableOccurrence viewState="Collapse" height="74" id="1065152" name="_MBS_DeveloperOptions" type="Local">
	<UUID modifications="11" userName="R.Watson" accountName="admin" timestamp="2020-08-04T09:52:12">CAA554C7-745C-406A-86DF-E0DA0476CE18</UUID>
	<BaseTableSourceReference type="BaseTableReference">
		<BaseTableReference id="140" name="_MBS_DeveloperOptions"></BaseTableReference>
	</BaseTableSourceReference>
	<CoordRect top="818" left="1036" bottom="936" right="1268"></CoordRect>
	<Color red="255" green="0" blue="153" alpha="1.00"></Color>
</TableOccurrence>
