tests/snapshots/table_occurrences/fmSyntaxColorizer/_Palette - ID 1065115.xml.snap
---
source: src/main.rs
expression: output_content
---
<TableOccurrence viewState="Related" height="-12" id="1065115" name="_Palette" type="Local">
	<UUID modifications="61" userName="R.Watson" accountName="admin" timestamp="2021-09-24T09:37:43">A56D88DF-16D4-4643-9FF2-7065EAF0A2E4</UUID>
	<BaseTableSourceReference type="BaseTableReference">
		<BaseTableReference id="135" name="_Palette"></BaseTableReference>
	</BaseTableSourceReference>
	<CoordRect top="39" left="1036" bottom="135" right="1268"></CoordRect>
	<Color red="255" green="0" blue="153" alpha="1.00"></Color>
</TableOccurrence>
